Changes in @NEW@:
  o Client Changes:
    * Added a --file-flavors option to conary q, rq, and scs (CNY-1507).

  o Build Changes:
    * When Conary calls an external program (python, perl, monodis)
      to determine file dependencies and that program is not a part
      of the package being built, it will warn if that external
      program is not provided by the build requirements. (CNY-1492)
    * addPatch()'s optional argument "extraArgs" will now do the right thing
      if passed a single string instead of a tuple or list. 

  o Internal Changes:
    * The conary.lib.elf module can now be built against libelf
      version 0.8.0 or later as well as the libelf implementation
      provided by elfutils.  libelf can be downloaded from
      http://www.mr511.de/software/ (CNY-1501)

  o Bug Fixes:
    * Shadows that point back to a label that is already uphill are now
      issuing a proper error message. (CNY-847)
    * Running the rblist command of conary as non-root produces a proper
      error message. (CNY-1453)
    * Badly-formatted parentVersion strings in derived packages
      (experimental) no longer cause a stacktrace.
    * When installing into a subdirectory, not running tag scripts,
      and not using the normal job ordering, Conary previously could
      fail to look up user names in packages installed before the
      glibc package. (CNY-1515)

Changes in 1.1.19:
  o Client Changes:
    * A new "cvc promote" command has been added. "cvc promote" is a
      special type of cloning based on group structure.  For more
      information on promote, see the JIRA issue until documentation
      on the wiki is updated.  (CNY-1304)
    * An "--all-flavors" option has been added to "cvc promote" which
      promotes all flavors of the latest version of the listed
      troves. (CNY-1440)
    * A programmatic interface for performing partial clones, where
      only some components out of a package are cloned based on